force-app/main/default/objects/Income_Estimation__c/Income_Estimation__c.object-meta.xml
<CustomObject>
    <description>Income Estimation is income of customer(SE Segment).Show this Data on Customer Single View.This Data are integrate form MIS(Batch)</description>
    <label>Income Estimation</label>
    <nameField>
        <displayFormat>IN-{000000000}</displayFormat>
        <label>Income Estimation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Income Estimation</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>