force-app/main/default/objects/Income_Estimation__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>TMB Cust ID</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Income Estimation</relationshipLabel>
    <relationshipName>Income_Estimation</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>