force-app/main/default/objects/Income_Estimation__c/fields/as_of_date__c.field-meta.xml
<CustomField>
    <fullName>as_of_date__c</fullName>
    <description>Date</description>
    <encryptionScheme>None</encryptionScheme>
    <label>as of date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>