force-app/main/default/objects/Income_Estimation__c/fields/AVG_Income_amount__c.field-meta.xml
<CustomField>
    <fullName>AVG_Income_amount__c</fullName>
    <description>income/month of customer</description>
    <label>Income amount AVG</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>