force-app/main/default/objects/Income_Estimation__c/fields/BOT_ID__c.field-meta.xml
<CustomField>
    <fullName>BOT_ID__c</fullName>
    <description>Customer&apos;s Band of Thailand ID</description>
    <encryptionScheme>None</encryptionScheme>
    <label>BOT ID</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>