force-app/main/default/objects/Income_Estimation__c/fields/Model_Type__c.field-meta.xml
<CustomField>
    <fullName>Model_Type__c</fullName>
    <description>cutomer model type(OD-customer Or Non-OD customer)</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Model Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>