force-app/main/default/objects/Income_Estimation__c/fields/Valida_date__c.field-meta.xml
<CustomField>
    <fullName>Valida_date__c</fullName>
    <description>Date that can use income estimation data</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Valid Date</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>